--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "client-install": "npm i --prefix client",
     "client": "npm start --prefix client",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "concurrently": "^7.3.0",
     "config": "^3.3.7",
     "express": "^4.18.1",
     "mongoose": "^6.5.4"
