--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "concurrently": "^7.3.0",
     "config": "^3.3.7",
     "express": "^4.18.1",
-    "mongoose": "^6.5.4"
+    "mongoose": "^6.5.4",
+    "socket.io": "^4.5.2"
   }
 }
